--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,9 @@ on:
     tags:
       - '*'
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -19,9 +22,9 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Install go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
-          go-version: 1.14.x
+          go-version: 1.17
 
       - name: Run goreleaser
         if: startsWith(github.ref, 'refs/tags/')
